fies and new button on video page

--- a/options.html
+++ b/options.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>YouTube Summary Extension Options</h1>
-    <label for="apiKey">Anthropic API Key:</label>
+    <label for="apiKey">OpenRouter API Key:</label>
     <input type="password" id="apiKey" />
     <button id="save">Save</button>
     <p id="status"></p>
