fix Summaries button

--- a/options.html
+++ b/options.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YouTube Summary Extension Options</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="yt-summary-extension">
     <h1>YouTube Summary Extension Options</h1>
     <label for="apiKey">OpenRouter API Key:</label>
     <input type="password" id="apiKey" />
