--- a/summaries.html
+++ b/summaries.html
@@ -6,8 +6,11 @@
     <title>YouTube Summaries</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="yt-summary-extension">
     <h1>YouTube Summaries</h1>
+    <div id="controls">
+        <button id="sort-button">Sort by Date</button>
+    </div>
     <div id="summaries-container"></div>
     <script src="summaries.js"></script>
 </body>
